#12918 closed bug (fixed)
VESA fails to set a valid mode on boot unless selected manually
Reported by: | edglex | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/Graphics | Version: | R1/Development |
Keywords: | vesa.accelerant | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Around 2 years ago one of my machines (that uses VESA graphics) started requiring me to select a safe video mode on every boot (otherwise it just hangs on the rocket). Knowing that it was between two hrevs 6 months apart I looked for changes relating to VESA between the dates and have found the change [1] that caused it (tested by reverting the change and testing).
The change to vesa accelerant is intended to only set the video mode if it is different to the current one. But at least on my hardware, it causes the system to not set the video mode correctly on boot.
[1] https://github.com/haiku/haiku/commit/89a406bc520f3c78e4463041994b0c9fa76b3902
Change History (4)
comment:1 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:2 by , 8 years ago
I tested this on my own PC today using hrev50501, but it does not appear to work. On-board graphics on my PC is currently unsupported Intel HD4500. In order to use VESA I must manually select fail safe video mode and 1600 x 1200 32 bit resolution on every boot. This step is not necessary on Alpha 3 (tested today). Haiku will automatically select the VESA driver and screen resolution when the GPU is not supported by the Intel driver.
comment:3 by , 8 years ago
A separate bugreport for a separate problem would be better. And: do you really need to do both (failsafe + forcing the video mode)? Or is just one of the two options enough?
Fixed in hrev50501.