src/add-ons/accelerants/vesa/accelerant.h
@@ -19,6 +19,7 @@ typedef struct accelerant_info {
 	area_id				mode_list_area;
 		// cloned list of standard display modes
 	display_mode		*mode_list;
+	uint16				current_mode;
 
 	vesa_mode			*vesa_modes;
 } accelerant_info;
